--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     ]
   },
   "dependencies": {
+    "@vercel/static-build": "^1.3.40",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^18.2.0",
